2011-01-17  Richard Henderson  <rth@redhat.com>

	* config/rx/rx.md (bswapsi2): Use = not + for output reload.
	(bswaphi2, bitinvert, revw): Likewise.

	* config/rx/rx.c (gen_rx_store_vector): Use VOIDmode for gen_rtx_SET.
	(gen_rx_rtsd_vector, gen_rx_popm_vector): Likewise.
	* config/rx/rx.md (pop_and_return): Use VOIDmode for SET.
	(stack_push, stack_pushm, stack_pop, stack_popm): Likewise.
	(bitset, bitset_in_memory): Likewise.
	(bitinvert, bitinvert_in_memory): Likewise.
	(bitclr, bitclr_in_memory): Likewise.
	(insv, sync_lock_test_and_setsi, movstr, rx_movstr): Likewise.
	(rx_strend, rx_cmpstrn): Likewise.
	(rx_setmem): Likewise.  Make the source BLKmode to match the dest.
	(bitop peep2 patterns): Remove.

	* config/rx/rx.c (rx_match_ccmode): New.
	* config/rx/rx-protos.h: Update.
	* config/rx/rx.md (abssi2): Clobber, don't set flags.
	(addsi3, adddi3, andsi3, negsi2, one_cmplsi2, iorsi3): Likewise.
	(rotlsi3, rotrsi3, ashrsi3, lshrsi3, ashlsi3): Likewise.
	(subsi3, subdi3, xorsi3, addsf3, divsf3, mulsf3, subsf3): Likewise.
	(fix_truncsfsi2, floatsisf2): Likewise.
	(*abssi2_flags, *addsi3_flags, *andsi3_flags, *negsi2_flags): New.
	(*one_cmplsi2_flags, *iorsi3_flags, *rotlsi3_flags): New.
	(*rotrsi3_flags, *ashrsi3_flags, *lshrsi3_flags, *ashlsi3_flags): New.
	(*subsi3_flags, *xorsi3_flags): New.

	* config/rx/rx.md (cstoresf4, *cstoresf4): New patterns.

	* config/rx/rx.c (rx_print_operand): Remove workaround for
	unsplit comparison operations.

	* config/rx/rx.md (movsicc): Split after reload.
	(*movsicc): Merge *movsieq and *movsine via match_operator.
	(*stcc): New pattern.

	* config/rx/rx.c (rx_float_compare_mode): Remove.
	* config/rx/rx.h (rx_float_compare_mode): Remove.
	* config/rx/rx.md (cstoresi4): Split after reload.
	(*sccc): New pattern.

	* config/rx/predicates.md (label_ref_operand): New.
	(rx_z_comparison_operator): New.
	(rx_zs_comparison_operator): New.
	(rx_fp_comparison_operator): New.